--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.leapgs.starfighter"
+        applicationId "com.leapgs.pruebas3"
         minSdkVersion 9
         targetSdkVersion 25
     }
