--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,9 +18,17 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.leapgs.pruebas3"
+        applicationId "com.leapgs.starfighter"
         minSdkVersion 9
         targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
