--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.leapgs.starfighter"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.leapgs.starfighter" >
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
 
@@ -14,7 +12,7 @@
         <activity
             android:name="com.leapgs.starfighter.AndroidLauncher"
             android:label="@string/app_name" 
-            android:screenOrientation="portrait"
+            android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
